force-app/main/default/objects/Legal_Services__c/Legal_Services__c.object-meta.xml
<CustomObject>
    <label>Legal / Financing Services</label>
    <nameField>
        <displayFormat>LFS-{000000}</displayFormat>
        <label>Service ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Legal / Financing Services</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>