force-app/main/default/objects/Legal_Services__c/fields/Account_Executive__c.field-meta.xml
<CustomField>
    <fullName>Account_Executive__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Executive</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Legal_Services</relationshipName>
    <type>Lookup</type>
</CustomField>