force-app/main/default/objects/Legal_Services__c/fields/Anticipated_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Anticipated_Close_Date__c</fullName>
    <label>Anticipated Close Date</label>
    <type>Date</type>
</CustomField>