force-app/main/default/objects/Legal_Services__c/fields/Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Type__c</fullName>
    <label>Contract Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PSA Review</fullName>
            </value>
            <value>
                <fullName>GSA Review</fullName>
            </value>
            <value>
                <fullName>O&amp;M Review</fullName>
            </value>
            <value>
                <fullName>Installation Review</fullName>
            </value>
            <value>
                <fullName>Customer Paper Review</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>