force-app/main/default/objects/Legal_Services__c/fields/Customer_Credit_Rating__c.field-meta.xml
<CustomField>
    <fullName>Customer_Credit_Rating__c</fullName>
    <label>Customer Credit Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Public Credit Rating</fullName>
            </value>
            <value>
                <fullName>Private Credit Rating</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>