force-app/main/default/objects/Legal_Services__c/fields/Is_Customer_Seeking_ITC__c.field-meta.xml
<CustomField>
    <fullName>Is_Customer_Seeking_ITC__c</fullName>
    <label>Is Customer Seeking ITC?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>