force-app/main/default/objects/Legal_Services__c/fields/My_Legal_Service_Requests__c.field-meta.xml
<CustomField>
    <fullName>My_Legal_Service_Requests__c</fullName>
    <formula>OR(
Opportunity__r.Owner.Alias = $User.Alias,
Owner:User.Alias = $User.Alias
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>My Legal Service Requests</label>
    <type>Checkbox</type>
</CustomField>