force-app/main/default/objects/Legal_Services__c/fields/Offtake_Type__c.field-meta.xml
<CustomField>
    <fullName>Offtake_Type__c</fullName>
    <formula>Opportunity__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Offtake Type</label>
    <type>Text</type>
</CustomField>