force-app/main/default/objects/Legal_Services__c/fields/Opp_Purchase_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Opp_Purchase_Vehicle__c</fullName>
    <formula>Text(Opportunity__r.Purchase_Vehicle__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opp Purchase Vehicle</label>
    <type>Text</type>
</CustomField>