force-app/main/default/objects/Legal_Services__c/fields/Opp_Sales_Channel__c.field-meta.xml
<CustomField>
    <fullName>Opp_Sales_Channel__c</fullName>
    <formula>Text(Opportunity__r.Sales_Channel__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opp Sales Channel</label>
    <type>Text</type>
</CustomField>