force-app/main/default/objects/Legal_Services__c/fields/Opp_Segment__c.field-meta.xml
<CustomField>
    <fullName>Opp_Segment__c</fullName>
    <formula>Text(Opportunity__r.BTM_Segment__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opp Segment</label>
    <type>Text</type>
</CustomField>