force-app/main/default/objects/Legal_Services__c/fields/Opp_Size_kW__c.field-meta.xml
<CustomField>
    <fullName>Opp_Size_kW__c</fullName>
    <formula>Opportunity__r.Size_kW__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opp Size (kW)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>