force-app/main/default/objects/Legal_Services__c/fields/Opportunity_Folder__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Folder__c</fullName>
    <label>Opportunity Folder</label>
    <type>Url</type>
</CustomField>