force-app/main/default/objects/Legal_Services__c/fields/Purchase_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Vehicle__c</fullName>
    <label>Purchase Vehicle</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Purchase_Vehicle_Picklist</valueSetName>
    </valueSet>
</CustomField>