force-app/main/default/objects/Legal_Services__c/fields/Purchase_Vehicle_Current__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Vehicle_Current__c</fullName>
    <formula>Text(Opportunity__r.Purchase_Vehicle__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Purchase Vehicle Current</label>
    <type>Text</type>
</CustomField>