force-app/main/default/objects/Legal_Services__c/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Legal Review</fullName>
            </value>
            <value>
                <fullName>Financing</fullName>
            </value>
            <value>
                <fullName>Legal Review - Customer</fullName>
                <isActive>false</isActive>
                <label>Legal Review - Customer</label>
            </value>
            <value>
                <fullName>Legal Review - MSE</fullName>
                <isActive>false</isActive>
                <label>Legal Review - MSE</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>