force-app/main/default/objects/Legal_Services__c/fields/Review_by_date__c.field-meta.xml
<CustomField>
    <fullName>Review_by_date__c</fullName>
    <label>Review-by date</label>
    <type>Date</type>
</CustomField>