force-app/main/default/objects/Legal_Services__c/fields/Sales_Channel_Current__c.field-meta.xml
<CustomField>
    <fullName>Sales_Channel_Current__c</fullName>
    <formula>CASE(
    TEXT(Opportunity__r.Sales_Channel__c),
    &quot;Direct&quot;, &quot;Direct&quot;,
    &quot;Indirect_MSE_Reseller&quot;, &quot;Indirect (MSE Reseller)&quot;,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Channel Current</label>
    <type>Text</type>
</CustomField>