force-app/main/default/objects/Legal_Services__c/fields/Sales_Scope__c.field-meta.xml
<CustomField>
    <fullName>Sales_Scope__c</fullName>
    <label>Sales Scope</label>
    <length>255</length>
    <type>Text</type>
</CustomField>