force-app/main/default/objects/Legal_Services__c/fields/Size_kW__c.field-meta.xml
<CustomField>
    <fullName>Size_kW__c</fullName>
    <label>Size (kW)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>