force-app/main/default/objects/Legal_Services__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>To Do</fullName>
            </value>
            <value>
                <fullName>Info Needed</fullName>
            </value>
            <value>
                <fullName>Mainspring Review</fullName>
            </value>
            <value>
                <fullName>Counterparty Review</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>Contract Development</fullName>
                <isActive>false</isActive>
                <label>Contract Development</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>