force-app/main/default/objects/Legal_Services__c/fields/Target_commercial_operation_date__c.field-meta.xml
<CustomField>
    <fullName>Target_commercial_operation_date__c</fullName>
    <label>Target Commercial Operation Date</label>
    <type>Date</type>
</CustomField>