force-app/main/default/objects/Legal_Services__c/fields/Target_Contract_Execution_Date__c.field-meta.xml
<CustomField>
    <fullName>Target_Contract_Execution_Date__c</fullName>
    <label>Target Contract Execution Date</label>
    <type>Date</type>
</CustomField>