force-app/main/default/objects/Legal_Services__c/fields/Total_Number_of_Units__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Units__c</fullName>
    <formula>Opportunity__r.Number_of_Units__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Number of Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>