force-app/main/default/objects/Legal_Services__c/fields/Why_does_customer_want_financing__c.field-meta.xml
<CustomField>
    <fullName>Why_does_customer_want_financing__c</fullName>
    <label>Why does customer want financing?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Capital budget constraints</fullName>
            </value>
            <value>
                <fullName>Technology risk concerns</fullName>
            </value>
            <value>
                <fullName>Tax monetization inefficiency</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>