force-app/main/default/objects/Legal_Services__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Contract_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>