force-app/main/default/objects/Legal_Services__c/listViews/Financing_Requests.listView-meta.xml
<ListView>
    <fullName>Financing_Requests</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Why_does_customer_want_financing__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Request_Type__c</field>
        <operation>equals</operation>
        <value>Financing</value>
    </filters>
    <label>Financing Requests</label>
</ListView>