force-app/main/default/objects/Legal_Services__c/listViews/Legal_Requests.listView-meta.xml
<ListView>
    <fullName>Legal_Requests</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Contract_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Request_Type__c</field>
        <operation>equals</operation>
        <value>Legal Review</value>
    </filters>
    <label>Legal Requests</label>
</ListView>