force-app/main/default/objects/Legal_Services__c/listViews/My_Legal_Service_Requests.listView-meta.xml
<ListView>
    <fullName>My_Legal_Service_Requests</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Contract_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>My_Legal_Service_Requests__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Legal Service Requests</label>
</ListView>